# seebiang

./: .gitignore  ATTRIBUTIONS.md  LICENSE  LICENSE-CODE  LICENSE-DATA  README.md
data/characters/: index.json  toy-trio.json
data/schema/: character.schema.json
py/: pyproject.toml
py/seebiang/: __init__.py  animate.py  cli.py  io.py  render.py  review.py  validate.py
tests/py/: test_animate.py  test_parity.py  test_render.py  test_tracer_smoke.py  test_validate.py
tools/digitize/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tools/digitize/src/: export.ts  main.ts  reference.ts  tracer.ts
tools/scripts/: debug_browser.py  extract_noto_outline.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/scripts/: copy-data.mjs
web/src/: main.ts  styles.css
web/src/pages/: detail.ts  gallery.ts
